--- a/locale/ar_IQ/locale.xml
+++ b/locale/ar_IQ/locale.xml
@@ -4,8 +4,8 @@
 <!--
   * plugins/generic/addThis/locale/ar_IQ/locale.xml
   *
-  * Copyright (c) 2014-2017 Simon Fraser University
-  * Copyright (c) 2003-2017 John Willinsky
+  * Copyright (c) 2014-2019 Simon Fraser University
+  * Copyright (c) 2003-2019 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for this plugin.
@@ -13,22 +13,22 @@
   -->
 
 <locale name="ar_IQ" full_name="العربية">
-	<message key="plugins.generic.addThis.displayName">AddThis</message>
-	<message key="plugins.generic.addThis.description">هذه الإضافة تقدم إمكانيات مشاركة طلبات التقديم عبر وسائل التواصل الاجتماعي، مقدمة من addThis.</message>
+	<message key="plugins.generic.addThis.displayName">إضافة AddThis</message>
+	<message key="plugins.generic.addThis.description">هذه الإضافة تتيح مشاركة طلبات التقديم عبر وسائل التواصل الاجتماعي.</message>
 	<message key="plugins.generic.addThis.title">AddThis</message>
 	<message key="plugins.generic.addThis.settings">الإعدادات</message>
 	<message key="plugins.generic.addThis.settings.statistics">الإحصائيات</message>
 
 	<!-- AddThis form locale keys and messages -->
-	<message key="plugins.generic.addThis.form.saved">إعدادات نموذج AddThis قد تم حفظها.</message>
-	<message key="plugins.generic.addThis.form.profileId">رمز الملف الشخصي في AddThis</message>
+	<message key="plugins.generic.addThis.form.saved">تم حفظ إعدادات AddThis بنجاح.</message>
+	<message key="plugins.generic.addThis.form.profileId">رمز الملف التعريفي لـ AddThis</message>
 	<message key="plugins.generic.addThis.form.username">اسم مستخدم AddThis</message>
-	<message key="plugins.generic.addThis.form.password">كلمة مرور AddThis (مطلوب لعرض الإحصائيات)</message>
-	<message key="plugins.generic.addThis.form.registerLink"><![CDATA[<a href="https://www.addthis.com/register">التسجيل</a> مجاناً في خدمة تحصل منها على تقارير إحصائية معمقة وفرصة فهم أفضل لنشاط التواصل الاجتماعي في موقعك.]]></message>
-	<message key="plugins.generic.addThis.settings.displayStyle">لطفاً، عليك اختيار الكيفية التي تريد أن تظهر بها AddThis</message>
+	<message key="plugins.generic.addThis.form.password">كلمة مرور AddThis (مطلوبة لعرض الإحصائيات)</message>
+	<message key="plugins.generic.addThis.form.registerLink"><![CDATA[<a href="https://www.addthis.com/register">التسجيل</a> للحصول على تقارير إحصائية معمقة من أجل فهم أفضل لحركة المرور الاجتماعية في موقعك.]]></message>
+	<message key="plugins.generic.addThis.settings.displayStyle">لطفاً، إختر كيفية عرض AddThis</message>
 
 	<!-- AddThis grid keys (only a few, since the grid does very little) -->
 	<message key="plugins.generic.addThis.grid.shares">مشاركات</message>
 	<message key="plugins.generic.addThis.grid.title">أكثر الروابط مشاركة</message>
-	<message key="plugins.generic.addThis.statistics.instructions"><![CDATA[هذه القائمة تدرج أكثر الروابط شعبية والتي تمت مشاركتها من موقعك خلال الأسبوع الماضي. للوصول إلى كل الإحصائيات الممكنة عبر AddThis، لطفاً، قم بزيارة موقع <a href="https://www.addthis.com/dashboard" target="_blank">دفة قيادة AddThis</a> وسجل دخولك فيه.]]></message>
+	<message key="plugins.generic.addThis.statistics.instructions"><![CDATA[هذه القائمة تعرض أكثر الروابط مشاركة خلال الأسبوع الماضي. للحصول على كل الإحصائيات المتاحة من AddThis، لطفاً، قم بزيارة موقع <a href="https://www.addthis.com/dashboard" target="_blank">دفة قيادة AddThis</a> وسجل دخولك فيه.]]></message>
 </locale>
