--- a/locale/es_ES/locale.po
+++ b/locale/es_ES/locale.po
@@ -15,7 +15,7 @@ msgid "plugins.generic.addThis.displayName"
 msgstr "AddThis"
 
 msgid "plugins.generic.addThis.description"
-msgstr "Este complemento permite el uso compartido de addthis en las redes sociales para las propuestas"
+msgstr "Este módulo vía AddThis permite la divulgación a través de las redes sociales de sus trabajos"
 
 msgid "plugins.generic.addThis.title"
 msgstr "AddThis"
@@ -39,10 +39,10 @@ msgid "plugins.generic.addThis.form.password"
 msgstr "Contraseña de AddThis (necesaria para mostrar estadísticas)"
 
 msgid "plugins.generic.addThis.form.registerLink"
-msgstr "<a href=\"https://www.addthis.com/register\">Regístrese</a> para obtener informes de análisis exahustivos y entender mejor el tráfico social de su sitio web."
+msgstr "<a href=\"https://www.addthis.com/register\">Regístrese</a> para obtener informes de análisis exhaustivos y entender mejor el tráfico social de su sitio web."
 
 msgid "plugins.generic.addThis.settings.displayStyle"
-msgstr "Por favor, escoge la forma en que Addthis debería visualizarse"
+msgstr "Por favor, elija la manera en que Addthis debería visualizarse"
 
 msgid "plugins.generic.addThis.grid.shares"
 msgstr "Compartidos"
