--- a/locale/id_ID/locale.po
+++ b/locale/id_ID/locale.po
@@ -3,8 +3,8 @@ msgstr ""
 "PO-Revision-Date: 2020-03-02 14:36+0000\n"
 "Last-Translator: Ramli Baharuddin <ramli.baharuddin@relawanjurnal.id>\n"
 "Language-Team: Indonesian <http://translate.pkp.sfu.ca/projects/plugins/"
-"addthis/id/>\n"
-"Language: id\n"
+"addthis/id_ID/>\n"
+"Language: id_ID\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
