--- a/locale/tr_TR/locale.po
+++ b/locale/tr_TR/locale.po
@@ -4,7 +4,7 @@ msgstr ""
 "Last-Translator: Hüseyin Körpeoğlu <yoruyenturk@hotmail.com>\n"
 "Language-Team: Turkish <http://translate.pkp.sfu.ca/projects/plugins/addthis/"
 "tr_TR/>\n"
-"Language: tr\n"
+"Language: tr_TR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
