--- a/locale/es_ES/locale.po
+++ b/locale/es_ES/locale.po
@@ -3,10 +3,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-02-25T16:03:51+00:00\n"
-"PO-Revision-Date: 2020-03-06 03:35+0000\n"
+"PO-Revision-Date: 2020-06-13 10:39+0000\n"
 "Last-Translator: Jordi LC <jordi.lacruz@uab.cat>\n"
 "Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/plugins/addthis/"
-"es/>\n"
+"es_ES/>\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,18 +15,18 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.generic.addThis.displayName"
-msgstr "AddThis"
+msgstr "Módulo AddThis"
 
 msgid "plugins.generic.addThis.description"
 msgstr ""
-"El módulo AddThis permite la divulgación a través de las redes sociales de "
-"sus envíos."
+"Este módulo proporciona la funcionalidad AddThis de compartición de "
+"contenido social para los envíos."
 
 msgid "plugins.generic.addThis.title"
-msgstr "AddThis"
+msgstr "Módulo AddThis"
 
 msgid "plugins.generic.addThis.settings"
-msgstr "Preferencias"
+msgstr "Ajustes"
 
 msgid "plugins.generic.addThis.settings.statistics"
 msgstr "Estadísticas"
@@ -38,7 +38,7 @@ msgid "plugins.generic.addThis.form.profileId"
 msgstr "Identificación del perfil AddThis"
 
 msgid "plugins.generic.addThis.form.username"
-msgstr "Nombre de usuario de AddThis"
+msgstr "Nombre de usuario/a de AddThis"
 
 msgid "plugins.generic.addThis.form.password"
 msgstr "Contraseña de AddThis (necesaria para mostrar estadísticas)"
@@ -50,7 +50,7 @@ msgid "plugins.generic.addThis.settings.displayStyle"
 msgstr "Por favor, elija la manera en que Addthis debería visualizarse"
 
 msgid "plugins.generic.addThis.grid.shares"
-msgstr "Compartidos"
+msgstr "Comparticiones"
 
 msgid "plugins.generic.addThis.grid.title"
 msgstr "Enlaces más compartidos"
