--- a/locale/it_IT/locale.po
+++ b/locale/it_IT/locale.po
@@ -1,57 +1,86 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: Italian (Common Plugins)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-25T16:03:51+00:00\n"
-"PO-Revision-Date: 2020-05-07 10:38+0000\n"
-"Last-Translator: Akin Ayturan <akinayturan@gmail.com>\n"
-"Language-Team: English (United States) <http://translate.pkp.sfu.ca/projects/"
-"plugins/addthis/en_US/>\n"
-"Language: en_US\n"
+"POT-Creation-Date: 2022-01-28 11:28+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: Italian <http://translate.pkp.sfu.ca/projects/plugins/addthis/"
+"it_IT/>\n"
+"Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.9.1\n"
 
-msgid "plugins.generic.addThis.displayName"
-msgstr "AddThis Plugin"
+msgctxt "plugins.generic.addThis.form.registerLink"
+msgid ""
+"<a href=\"https://www.addthis.com/register\">Register</a> for free in-depth "
+"analytics reports and better understand your site's social traffic."
+msgstr ""
+"<a href=\"https://www.addthis.com/register\">Registrati</a> gratuitamente "
+"per avere report approfonditi di statistiche e migliorare la comprensione "
+"del traffico del tuo sito sui social network."
 
-msgid "plugins.generic.addThis.description"
-msgstr "Questo plugin aggiunge la condivisione sui social media di addThis alle proposte."
+msgctxt "plugins.generic.addThis.description"
+msgid "This plugin provides the addThis social media sharing for submissions."
+msgstr ""
+"Questo plugin aggiunge alle proposte la condivisione sui social media del "
+"servizio addThis."
 
-msgid "plugins.generic.addThis.title"
-msgstr "AddThis Plugin"
-
-msgid "plugins.generic.addThis.settings"
-msgstr "Impostazioni"
-
-msgid "plugins.generic.addThis.settings.statistics"
-msgstr "Statistiche"
-
-msgid "plugins.generic.addThis.form.saved"
-msgstr "Impostazioni AddThis salvate."
-
-msgid "plugins.generic.addThis.form.profileId"
-msgstr "AddThis Profile ID"
-
-msgid "plugins.generic.addThis.form.username"
+msgctxt "plugins.generic.addThis.form.username"
+msgid "AddThis Username"
 msgstr "AddThis Username"
 
-msgid "plugins.generic.addThis.form.password"
-msgstr "AddThis Password (richiesta per mostrare le statistiche)"
+msgctxt "plugins.generic.addThis.form.profileId"
+msgid "AddThis Profile ID"
+msgstr "AddThis Profile ID"
 
-msgid "plugins.generic.addThis.form.registerLink"
-msgstr "<a href=\"https://www.addthis.com/register\">Registrati</a> gratuitamente per avere report di statistiche approfondite e migliorare la comprensione del traffico del tuo sito sui social network."
+msgctxt "plugins.generic.addThis.displayName"
+msgid "AddThis Plugin"
+msgstr "AddThis Plugin"
 
-msgid "plugins.generic.addThis.settings.displayStyle"
-msgstr "Scegliere come AddThis deve essere mostrato"
+msgctxt "plugins.generic.addThis.title"
+msgid "AddThis Plugin"
+msgstr "AddThis Plugin"
 
-msgid "plugins.generic.addThis.grid.shares"
-msgstr "Condividi"
+msgctxt "plugins.generic.addThis.statistics.instructions"
+msgid ""
+"This list shows your most popular shared links for the past week. For all of "
+"the possible AddThis statistics, please visit the <a href=\""
+"https://www.addthis.com/dashboard\" target=\"_blank\">AddThis Dashboard</a> "
+"website and log in."
+msgstr ""
+"Questa lista mostra i tuoi link più condivisi dell'ultima settimana. Per "
+"tutte le possibili statistiche di AddThis, visita la <a href=\""
+"https://www.addthis.com/dashboard\" target=\"_blank\">AddThis Dashboard</a> "
+"e fai il log in."
 
-msgid "plugins.generic.addThis.grid.title"
+msgctxt "plugins.generic.addThis.grid.title"
+msgid "Top Shared Links"
 msgstr "Links più condivisi"
 
-msgid "plugins.generic.addThis.statistics.instructions"
-msgstr "Questa lista mostra i tuoi link più condivisi dell'ultima settimana. Per tutte le possibili statistiche di AddThis, visita la <a href=\"https://www.addthis.com/dashboard\" target=\"_blank\">AddThis Dashboard</a> e fai il log in."
+msgctxt "plugins.generic.addThis.grid.shares"
+msgid "Shares"
+msgstr "Condividi"
+
+msgctxt "plugins.generic.addThis.settings.displayStyle"
+msgid "Please choose how AddThis should display"
+msgstr "Scegliere come AddThis deve essere mostrato"
+
+msgctxt "plugins.generic.addThis.form.password"
+msgid "AddThis Password (required for displaying stats)"
+msgstr "AddThis Password (richiesta per mostrare le statistiche)"
+
+msgctxt "plugins.generic.addThis.form.saved"
+msgid "AddThis form settings saved."
+msgstr "Impostazioni AddThis salvate."
+
+msgctxt "plugins.generic.addThis.settings.statistics"
+msgid "Statistics"
+msgstr "Statistiche"
+
+msgctxt "plugins.generic.addThis.settings"
+msgid "Settings"
+msgstr "Impostazioni"
